# SevenKewp_plugins

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_all.bat  build_all.sh  hlcoop.cmake  update_api.bat  update_api.sh
contra/: CMakeLists.txt  contra.cpp
contra/monster/: monster_boyz.cpp  monster_gunwagon.cpp
contra/proj/: proj_bullet.cpp  proj_bullet.h
contra/weapon/: ammobase.cpp  ammobase.h  ammomethod.cpp  weapon_contra.cpp  weapon_contra.h
disconator/: CMakeLists.txt  hlsp_disco_boss.cpp
disconator/cubemath/: disco_breakable.cpp  disco_disconator.cpp  disco_drone.cpp  disco_floor_system.cpp
maps/pizza_ya_san/: CMakeLists.txt  pizza_ya_san.cpp  weapon_as_jetpack.cpp  weapon_as_shotgun.cpp  weapon_as_soflam.cpp
pizza_ya_san/: pizza_ya_san.cpp  weapon_as_jetpack.cpp  weapon_as_soflam.cpp
restriction/: CMakeLists.txt  controller.cpp  restriction.cpp
svencontra2/: CMakeLists.txt  contra2.cpp  dynamicdifficult.cpp  dynamicdifficult.h  hook.cpp  monsterdeath.cpp  point_checkpoint.cpp  utility.cpp
svencontra2/entity/: func_noprojclip.cpp  func_tank_custom.cpp  func_tank_custom.min.cpp  info_weaponflag.cpp  trigger_changesky2.cpp  weaponballoon.cpp
svencontra2/proj/: proj_bullet.cpp  proj_bullet.h
svencontra2/weapon/: weapon_sc2ar.cpp  weapon_sc2fg.cpp  weapon_sc2lg.cpp  weapon_sc2mg.cpp  weapon_sc2sg.cpp  weaponbase.cpp  weaponbase.h
